register login component

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,6 +17,10 @@
 </li>
 </ng-container>
           </ul>
+          <div>
+            <a class="btn pull-right btn-primary" routerLink="/register">Register</a>
+            <a class="btn pull-right btn-primary" routerLink="/login">Login</a>
+          </div>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
