--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,10 +1,14 @@
 <h1 class="page-title">Register</h1>
+<div class="alert alert-danger" *ngIf="userExists">
+<p>That username already exists choose another or reset your password</p>
+</div>
+
 
 <form novalidate #f="ngForm" (ngSubmit)="register(f)">
 
 <div class="form-group">
 <label for="">Username</label>
-<input type="text" class="form-control" placeholder="Username" name="username" 
+<input type="text" class="form-control" placeholder="Username" name="username"
   [(ngModel)]="username"
   #userName="ngModel"
   minlength="2"
@@ -15,13 +19,12 @@
 Username is required.
 </div>
 <div class="alert alert-danger" *ngIf="userName.errors?.minlength && userName.touched">
-Minimum length is 2.
+Minimum length is 7.
 </div>
-
 
 <div class="form-group">
   <label for="">Password</label>
-  <input type="password" class="form-control" placeholder="Password" name="password" 
+  <input type="password" class="form-control" placeholder="Password" name="password"
   [(ngModel)]="password"
   #userPassword="ngModel"
   minlength="4"
@@ -34,6 +37,47 @@ Minimum length is 2.
 <div class="alert alert-danger" *ngIf="userPassword.errors?.minlength && userPassword.touched">
   Minimum length is 4.
 </div>
+
+<div class="form-group">
+  <label for="">Email</label>
+  <input type="email" class="form-control" placeholder="Email" name="email"
+  [(ngModel)]="email"
+  #userEmail="ngModel"
+  required
+/>
+</div>
+  <div class="alert alert-danger" *ngIf="userEmail.errors?.required && userEmail.touched">
+  Email is required.
+</div>
+
+<div class="form-group">
+  <label for="">Phone</label>
+  <input type="phone" class="form-control" placeholder="Phone" name="phone"
+  [(ngModel)]="phone"
+  #userPhone="ngModel"
+  required
+/>
+</div>
+  <div class="alert alert-danger" *ngIf="userPhone.errors?.required && userPhone.touched">
+  Phone is required.
+</div>
+
+
+<div class="form-group">
+  <label for="">Company</label>
+  <input type="company" class="form-control" placeholder="company" name="company"
+  [(ngModel)]="company"
+  #userCompany="ngModel"
+  required
+/>
+</div>
+  <div class="alert alert-danger" *ngIf="userCompany.errors?.required && userCompany.touched">
+  Company is required.
+</div>
+
+
+
+
 
 <div class="form-group">
   <button class="btn btn-default" [disabled]="!f.valid">Register</button>
