--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -3,10 +3,17 @@
 <p>That username already exists choose another or reset your password</p>
 </div>
 
+<div class="container">
+   <div id="signup">
 
-<form novalidate #f="ngForm" (ngSubmit)="register(f)">
+<div class="signup-screen">
+  <div class="space-bot text-center">
+     <h1>Registration</h1>
+    <div class="divider"></div>
+  </div>
 
-<div class="form-group">
+<form class="form-register" novalidate #f="ngForm" (ngSubmit)="register(f)">
+<div class="form-group input-field col s6">
 <label for="">Username</label>
 <input type="text" class="form-control" placeholder="Username" name="username"
   [(ngModel)]="username"
@@ -80,7 +87,17 @@ Minimum length is 7.
 
 
 <div class="form-group">
-  <button class="btn btn-default" [disabled]="!f.valid">Register</button>
+  <div class="space-top text-center">
+             <button ng-disabled="form-register" [disabled]="!f.valid" class=" waves-effect waves-light btn done">
+             <i class="material-icons left"></i> Register
+             </button>
+             <button type="button" class="waves-effect waves-light btn cancel">
+             <i class="material-icons left"></i>Cancel
+             </button>
+            </div>
+</div>
+</form>
 </div>
 
-</form>
+</div>
+</div>
