--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,7 @@
 
 <h1 class="page-title">Register</h1>
 <div class="alert alert-danger" *ngIf="userExists">
-<p>That username already exists choose another or reset your password</p>
+<p>User with this email already exists, choose another or reset your password</p>
 </div>
 <div class="container">
    <div id="signup">
@@ -94,3 +94,4 @@ Minimum length is 7.
 
 </div>
 </div>
+
