admin navigationbar added to app module component and CSS

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,9 +6,9 @@
    <div id="signup">
 
      <div class="alert alert-danger" *ngIf="loginFailed">
-     <p>Invalid email or password.</p>
+     <p>Invalid Credentials email/or password</p>
      </div>
-     
+
      <div class="alert alert-success" *ngIf="userRegistered">
      <p>Thank you for registering you can now login.</p>
      </div>
