--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-navbar></app-navbar>
-
-<router-outlet></router-outlet>
+    <app-admin-navbar *ngIf="!front"></app-admin-navbar>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12" [class.space]="!front">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
