--- a/src/app/components/admin-pages/admin-pages.component.html
+++ b/src/app/components/admin-pages/admin-pages.component.html
@@ -1,8 +1,8 @@
-<div class="alert alert success" *ngIf="successMsg">
+<div class="alert alert-success" *ngIf="successMsg">
   <p>Page deleted.</p>
 </div>
 
-<div class="alert alert success" *ngIf="errorMsg">
+<div class="alert alert-danger" *ngIf="errorMsg">
   <p>Error deleting page.</p>
 </div>
   
@@ -22,7 +22,8 @@
       <a routerLink="/admin/edit-page/{{page._id}}" >Edit</a>
     </td>
     
-    <td *ngIf="page.slug !='home' "><a routerLink="/admin/delete-page/{{page._id}}" >Delete</a>
+    <td *ngIf="page.slug !='home'">
+      <a (click)="deletePage(page._id)" routerLink="/admin/pages" >Delete</a>
     </td>
   </tr>
 </table>
