sidebar front functionality

--- a/src/app/components/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin-navbar/admin-navbar.component.html
@@ -4,6 +4,9 @@
               <li>
                 <a routerLink="admin/pages">Pages</a>
               </li>
+              <li>
+                  <a routerLink="admin/sidebar">Sidebar</a>
+                </li>
       </ul>
     </div>
 </nav>
