--- a/src/app/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin-sidebar/admin-sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-success" *ngIf="successMsg">
-  <p>Page edited.</p>
+  <p>Sidebar edited.</p>
 </div>
 
 <h1 class="page-title">Edit sidebar</h1>
